# fastapi_demo

./: .dockerignore  Dockerfile  README.md  database.db  docker-compose.yaml  hello.py  pyproject.toml  test.py
src/: database.py  main.py  models.py  test.py
